Se agrega el makemitrations y se inicializa la BD

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,16 @@
     <title>Base</title>
 </head>
 <body>
-    Holi {{nombre}}, como estas?
+    <h1>Bienvenidos</h1>
+    <h2>Holi {{nombre}}, como estas?</h2>
+
+    __________________________________________________________
+
+    <h2>Listado de blogs</h2>
+    <ul>
+        <li>{{blog.titulo}}</li>
+        <li>{{blog.caracteres}}</li>
+    </ul>
+
 </body>
 </html>
