--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,14 @@
 {% extends 'base.html' %}
 {% block titulo %}<title>Home</title>{% endblock titulo %}
+
+{% block nav %}
+        <nav class="navbar navbar-light bg-light static-top">
+            <div class="container">
+                <a class="btn btn-primary" href={% url 'home' %} >Home</a>
+                <a class="btn btn-primary" href={% url 'blogs' %}>Blogs</a>
+                <a class="btn btn-primary" href="#signup">Acerca de nosotros</a>
+            </div>
+        </nav>
+{% endblock nav %}
+
 {% block encabezado %} Bienvenidos al proyecto de Bascaran Juan Pablo {% endblock encabezado %}  
