agregamos listado de blogs y forms

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="btn btn-primary" href={% url 'home' %} >Home</a>
-                <a class="btn btn-primary" href={% url 'blogs' %}>Blogs</a>
+                <a class="btn btn-primary" href={% url 'crear_blog' %}>crear blog</a>
                 <a class="btn btn-primary" href="#signup">Acerca de nosotros</a>
             </div>
         </nav>
