--- a/templates/crear_blog.html
+++ b/templates/crear_blog.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block titulo %}<title>Crear Blog</title>{% endblock titulo %}
 {% block nav %}
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
@@ -8,15 +9,20 @@
             </div>
         </nav>
 {% endblock nav %}
-{% block encabezado %}Bienvenidos a los Blogs{% endblock encabezado %}  
-{% block subencabezado %}<h2>Holi {{nombre}}, estas listo?</h2>{% endblock subencabezado %} 
+{% block encabezado %}Listo para hacer magia?{% endblock encabezado %}  
+{% block subencabezado %}<h2>Holi, Comencemos!</h2>{% endblock subencabezado %} 
+
 {% block listado_blogs %}
-    <h2>Listado de blogs</h2>
+    <h2>Creemos un nuevo Blog</h2>
     __________________________________________________________
-    <ul>
-        {% for objeto in lista_objetos %}
-        <li>{{objeto.titulo}}</li>
-        <li>{{objeto.caracteres}}</li>
-        {% endfor %}
-    </ul>
+    <div>
+        <form action={% url 'crear_blog' %} method= "post">
+            {% csrf_token %}
+            <table>
+                {{form.as_table}}
+            </table>
+            <button>Crear</button>
+        </form>
+    </div>
 {% endblock listado_blogs %}
+
