--- a/templates/crear_blog.html
+++ b/templates/crear_blog.html
@@ -4,7 +4,7 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="btn btn-primary" href={% url 'home' %} >Home</a>
-                <a class="btn btn-primary" href={% url 'crear_blog' %}>crear blog</a>
+                <a class="btn btn-primary" href={% url 'listado_blogs' %}>Blogs</a>
                 <a class="btn btn-primary" href="#signup">Acerca de nosotros</a>
             </div>
         </nav>
@@ -21,7 +21,7 @@
             <table>
                 {{form.as_table}}
             </table>
-            <button>Crear</button>
+            <button action= {% url 'listado_blogs' %}>Crear</button>
         </form>
     </div>
 {% endblock listado_blogs %}
