--- a/templates/listado_blogs.html
+++ b/templates/listado_blogs.html
@@ -29,6 +29,8 @@
             <ul>
                 {% for blog in listado_blogs %}
                 <li>{{blog}}</li>
+                <a href={% url 'editar_blog' blog.id %}>Editar</a>
+                <a href={% url 'eliminar_blog' blog.id %}>Eliminar</a>
                 {% endfor %}
             </ul>
             {% else %}
