--- a/templates/blogs/listado_blogs.html
+++ b/templates/blogs/listado_blogs.html
@@ -31,6 +31,7 @@
                 <li>{{blog}}</li>
                 <a href={% url 'editar_blog' blog.id %}>Editar</a>
                 <a href={% url 'eliminar_blog' blog.id %}>Eliminar</a>
+                <a href={% url 'mostrar_blog' blog.id %}>Mostrar Blog</a>
                 {% endfor %}
             </ul>
             {% else %}
